# python-rucaptcha

./: .buildinfo  .coveragerc  .flake8  .gitconfig  .gitignore  .isort.cfg  .travis.yml  404.html  AGENTS.html  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  ClickCaptcha.py  CommonCaptcha.py  ISSUE_TEMPLATE.md  LICENSE  Makefile  README.md  RecaptchaV2New.py  SolvingTextCaptcha.py  TextCaptcha.py  callback_server.py  genindex.html  index.html  objects.inv  pyproject.toml  readme.txt  requirements.style.txt  requirements.test.txt  requirements.txt  search.html  searchindex.js  serializer.py  setup.py  sock.py
.github/: dependabot.yml
CaptchaTester/: __init__.py  click_captcha_request_tester.py  common_captcha_request_tester.py  funcaptcha_example.py  image_captcha_example.py  key_captcha_example.py  media_captcha_example.py  recaptcha_v2_example.py  result_handler_example.py  rucaptcha_control_example.py  solvemedia_captcha_request_tester.py  temp_config.py  text_captcha_example.py
Web-Interface/: config.py  orangery_server.py  python_rucaptcha.db  python_rucaptcha_nginx.conf  python_rucaptcha_sprvsr.conf  rucaptcha_uwsgi.ini  wsgi.py
_sources/: index.rst.txt
_static/: jinja.css
docs/: AGENTS.md  conf.py  index.rst  requirements.txt
examples/: capy_captcha_example.py  distilcaptcha_example.py  funcaptcha_example.py  geetest_example.py  hcaptcha_example.py  image_captcha_example.py  key_captcha_example.py  media_captcha_example.py  recaptcha_v2_example.py  recaptcha_v3_example.py  rucaptcha_control_example.py  text_captcha_example.py
okf/: captchaai-native-client.md  index.md  log.md  packaging-and-documentation.md  public-usage-surface.md  request-lifecycle.md  service-contracts.md  standard-solver-adapters.md  system-overview.md  testing-and-validation.md
python-captcha/: RecaptchaV1.py  RecaptchaV2New.py  RucaptchaControl.py  TextCaptcha.py  __init__.py
python_rucaptcha/: .travis.yml  CallbackClient.py  CapyPuzzle.py  CommonCaptcha.py  DistilCaptcha.py  FunCaptcha.py  GeeTest.py  HCaptcha.py  ImageCaptcha.py  KeyCaptcha.py  MediaCaptcha.py  ReCaptchaEnterprise.py  ReCaptchaV1.py  ReCaptchaV2.py  ReCaptchaV3.py  RecaptchaV1.py  RecaptchaV2.py  RotateCaptcha.py  RuCaptchaControl.py  RucaptchaControl.py  SocketAPI.py  TextCaptcha.py  __init__.py  base.py  config.py  config.py~master  decorators.py  enums.py  errors.py  result_handler.py  serializer.py
src/: .coverage  pyproject.toml  requirements.txt  setup.py
tests/: AGENTS.md  conftest.py  test_alibaba.py  test_altcha.py  (+34 more)
(+247 files in other folders)
