[tool.black]
line-length = 110
target-version = ['py311']
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
skip_glob = "examples/**"
line_length = 110
length_sort = true

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = [
    "tests",
]
addopts = "-vv --tb=short --durations=10"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-rucaptcha"
dynamic = ["version"]
authors = [
    {name = "AndreiDrang", email = "python-captcha@pm.me"},
]
description = "Python 3.9+ RuCaptcha library with AIO module."
readme = "README.md"
requires-python = ">=3.9"
keywords = [    "captcha",
				"rucaptcha",
				"2captcha",
				"deathbycaptcha",
				"recaptcha",
				"geetest",
				"hcaptcha",
				"capypuzzle",
				"rotatecaptcha",
				"funcaptcha",
				"keycaptcha",
				"python3",
				"recaptcha",
				"captcha",
				"security",
				"tencent",
				"atb_captcha",
				"python-library",
				"python-rucaptcha",
				"rucaptcha-client",
				"yandex",
				"turnstile",
				"amazon",
				"amazon_waf",
				"friendly-captcha"
            ]
license = "MIT"
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Framework :: AsyncIO",
        "Operating System :: Unix",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: MacOS",
]
dependencies = [
    "requests>=2.21.0",
    "aiohttp>=3.9.2",
    "msgspec>=0.18,<0.20",
    "tenacity>=8,<10"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["python_rucaptcha*"]

[tool.setuptools.dynamic]
version = {attr = "python_rucaptcha.__version__"}

[project.urls]
Homepage = "https://andreidrang.github.io/python-rucaptcha/"
Documentation = "https://andreidrang.github.io/python-rucaptcha/"
Repository = "https://github.com/AndreiDrang/python-rucaptcha"
Issues = "https://github.com/AndreiDrang/python-rucaptcha/issues"
Changelog = "https://github.com/AndreiDrang/python-rucaptcha/releases"
